[gd_scene load_steps=2 format=3 uid="uid://hud001"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="MoneyContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopBar/MoneyContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar/MoneyContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="Label" parent="MarginContainer/VBoxContainer/TopBar/MoneyContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "üí∞"

[node name="MoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/MoneyContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "10000 ¬•"

[node name="TimeContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopBar/TimeContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar/TimeContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="Label" parent="MarginContainer/VBoxContainer/TopBar/TimeContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "üìÖ"

[node name="DayLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/TimeContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "D√≠a 1"

[node name="RentContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopBar/RentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar/RentContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="Label" parent="MarginContainer/VBoxContainer/TopBar/RentContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "üè†"

[node name="RentLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/RentContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Renta en 7 d√≠as (50000 ¬•)"

[node name="BottomBar" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="InteractionLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
text = "[E] Interactuar"
horizontal_alignment = 1
vertical_alignment = 2
